<resources>
    <string name="app_name">Fitness App</string>
    <string name="welcomeback">Welcome back</string>
    <string name="startnewlife">Login to start a new life</string>
    <string name="Phone_number">Phone number</string>
    <string name="Password">Password</string>
    <string name="name">Name</string>
    <string name="lbl_dob">Date of birth</string>
    <string name="referral">Referral</string>
    <string name="Forget_password">Forgot password</string>
    <string name="login">Login</string>
    <string name="orloginwith">Or login with</string>
    <string name="Dont_have_an_account">Don`t have an account? </string>
    <string name="sign_up">Sign Up</string>
    <string name="signupas">Signup As</string>
    <string name="Google">Google</string>
    <string name="Facebook"> Facebook</string>
    <string name="trainer">Trainer</string>
    <string name="lbl_trainer">Trainer :</string>
    <string name="client">Client</string>
    <string name="lbl_session_cancelled">This Session has been Cancelled by You</string>
    <string name="termsof_services_policy">By continuing I acknowledge that I have \n read the<b>Terms of Services </b>and <b>Privacy Policy</b></string>
    <string name="lbl_enter_mobileno"><u>Please enter your phone number to \nreceive verification code</u></string>
    <string name="send">Send</string>
    <string name="save">Save</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="lbl_new_password"><u>Your new password should be different \nfrom previously used password</u></string>
    <string name="Join_as_trainer">Join as a trainer</string>
    <string name="lbl_join_Team">Join the No Error Team for free to earn \ndelicious rewards and incentives</string>
    <string name="click_here_to_see_the">Click here to see the</string>
    <string name="trainer_benefits">Trainer Benefits</string>
    <string name="Join_as_client">Join as a Client</string>
    <string name="join">Join</string>
    <string name="client_benefits">Client Benefits</string>
    <string name="continue_as_gogle">Continue with Google</string>
    <string name="continue_as_fb">Continue with meta</string>
    <string name="continue_as_email">Continue with Email</string>
    <string name="continue_as_iphone">Continue with Apple</string>
    <string name="continue_as_number">Continue with number</string>
    <string name="have_an_account">Have an account?</string>
    <string name="dont_have_an_account">Don’t have a account?</string>
    <string name="signin"><u>Signin</u></string>
    <string name="signup"><u>Signup</u></string>
    <string name="terms_privacypolicy">By tapping Continue, you agree to our <u><b><font color='#4391DA'>Terms and </font></b></u>\n<b><font color='#4391DA'>acknowledge</font></b> that you have read our <u><b><font color='#4391DA'>Privacy Policy</font></b></u>,</string>
    <string name="signup_as_a_Trainer"><u>Sign up as a Trainer</u></string>
    <string name="join_the">Join the</string>
    <string name="no_error">No Error</string>
    <string name="fitness_app">Fitness Team</string>
    <string name="special_benefits">and Read Special Benefits!</string>
    <string name="trainer_health_benefits">Trainer Healthcare Benefits</string>
    <string name="professional_insurance">Professional Insurance</string>
    <string name="equipment_discount">Equipment Discounts</string>
    <string name="got_to_trainer_onboarding">Go to trainer onboarding</string>
    <string name="otp_verification"><b>OTP</b> Verifivation</string>
    <string name="one_time_password">We will send you a <b>one-Time Password\n to this mobile number</b></string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="continu">Continue</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="resend_code"><u>Resend Code</u></string>
    <string name="enterotp_sent_to">Enter Otp sent to</string>
    <string name="submit">Submit</string>
    <string name="lbl_veriynumber">Verify your number</string>
    <string name="lbl_entercode"><u>Please enter a 4 digit code sent to \nyour number</u></string>
    <string name="welcometo">Welcome to</string>
    <string name="no_Error_fitness">No Error Fitness</string>
    <string name="lbl_help_experience">Help us set up a personalized experience for you \nto get the best experience.</string>
    <string name="male">  Male</string>
    <string name="female">  Female</string>
    <string name="others">  Others</string>
    <string name="fullname">Full Name</string>
    <string name="fullnamestring">Help us set up a personalized experience for you</string>
    <string name="fullnamestring2">to get the best experience.</string>
    <string name="Height">Height</string>
    <string name="Weight">Weight</string>
    <string name="pound">Pound</string>
    <string name="kilograms">Kilograms</string>
    <string name="lbl_your_location">Your Location</string>
    <string name="lbl_your_bio">Your Bio</string>
    <string name="lbl_current_location">Use my current location</string>
    <string name="lbl_describe_you">What describes you best?</string>
    <string name="lbl_searchbar_location_hint">Search for area, street, landmark...</string>
    <string name="lbl_search_meal">Search for dishes, meals, etc...</string>
    <string name="lbl_eat_what">Eat what makes you happy</string>
    <string name="lbl_browse_healthy_diets">Browse Healthy Diets</string>
    <string name="workout_goals">Define your workout goals</string>
    <string name="lbl_workout_goals">Help us set up a personalized experience for you \nto get the best experience.</string>
    <string name="lbl_calories_intake1">Help us understand \n your Calories intake</string>
    <string name="lbl_calories_count">How many calories do you eat on average everyday?</string>
    <string name="lbl_meal_count">How many meals do you have in a day?</string>
    <string name="lbl_dietary_needs">List specific dietary needs, if any?</string>
    <string name="lbl_dietary_restriction">List dietary restrictions, if any?</string>
    <string name="lbl_injuries_heading1">Are there any injuries \nwe should know about?</string>
    <string name="lbl_Muscle_pulls">Muscles Pulls</string>
    <string name="lbl_sprains">Sprains</string>
    <string name="lbl_Fractures">Fractures</string>
    <string name="lbl_tendonitis">Tendonitis</string>
    <string name="lbl_joint_dislocation">Joint Dislocation</string>
    <string name="lbl_asthma">Asthma</string>
    <string name="lbl_summary">Provide a summary</string>
    <string name="lbl_experience_que">What workout experiences are looking for?</string>
    <string name="virtual_session">Virtual Session</string>
    <string name="home">Home</string>
    <string name="gym">Gym</string>
    <string name="outdoors">Outdoors</string>
    <string name="preferwrkout1">Where do you prefer \nyour workouts?</string>
    <string name="lbl_accessgym">Do you have access to gym?</string>
    <string name="yes"> Yes</string>
    <string name="no"> No</string>
    <string name="add_gym">Add Gym</string>
    <string name="lbl_equipmentaccess">What equipments do you\nhave access to?</string>
    <string name="lbl_select_city">Select your city</string>
    <string name="lbl_popular_city">POPULAR CITY</string>
    <string name="lbl_invite_today">Earn higher pay rates on \n existing clients you \n invite today</string>
    <string name="lbl_for_usage">Use the referral link given below to list your existing\n clients with us and earn commissions for every client\n that signs up using your link.</string>
    <string name="lbl_choose_availability">Choose Availability</string>
    <string name="lbl_time_duration">Choose your training duration?</string>
    <string name="lbl_time_slots">Choose time slots for:</string>
    <string name="lbl_available_to_train">Which days are you available to train?</string>
    <string name="lbl_30min">30 min</string>
    <string name="lbl_45min">45 min</string>
    <string name="lbl_60min">60 min</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="lbl_viewprofile">View profile</string>
    <string name="lbl_myschedule">My Schedule</string>
    <string name="lbl_sessions">Sessions</string>
    <string name="lbl_select_sessions">Select session</string>
    <string name="lbl_clients">Clients</string>
    <string name="lbl_booktrainer">Book Trainer</string>
    <string name="lbl_pricing">Pricing</string>
    <string name="lbl_myprograms">My Programs</string>
    <string name="lbl_meal_marcket_place">Meal Marketplace</string>
    <string name="lbl_referrals">Referrals</string>
    <string name="lbl_logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="lbl_notifications">Notifications</string>
    <string name="lbl_you_have">You have</string>
    <string name="lbl_bookings">6 new bookings!</string>
    <string name="lbl_view_all">View all</string>
    <string name="lbl_see_more">See more</string>
    <string name="dismiss">Dismiss</string>
    <string name="lbl_schedule_event">Schedule \nan Event</string>
    <string name="lbl_schedule_event_disc">Set up training sessions \nfor a live or outdoors event</string>
    <string name="lbl_live_avilability">Live \navailability</string>
    <string name="lbl_live_avilability_disc">You’re Live and instantly \navailable  for a Training session</string>
    <string name="lbl_slider">Earn extra commissions for every new client acquired</string>
    <string name="lbl_schedule_overview">Schedule Overview</string>
    <string name="lbl_upcoming_session">Upcoming Session</string>
    <string name="tab_all">All</string>
    <string name="tab_upcoming">Upcoming</string>
    <string name="tab_sessions">Sessions</string>
    <string name="lbl_per_sessions">PER SESSION</string>
    <string name="lbl_group_session">GROUP SESSION</string>
    <string name="lbl_view_participants">View Participants</string>
    <string name="lbl_find_on_map">Find on map</string>
    <string name="summary">Summary</string>
    <string name="lbl_completed">Completed</string>
    <string name="lbl_message">Message</string>
    <string name="lbl_per_session">Per Session</string>
    <string name="lbl_discount">Discounts</string>
    <string name="discription_for_pricing">Set a price for your Sessions or \nSubscription Plans.</string>
    <string name="lbl_pintoTop">Pin to top</string>
    <string name="lbl_mute">Mute</string>
    <string name="lbl_turnoff_notification">Turn off notification</string>
    <string name="lbl_markas_unread">Mark as unread</string>
    <string name="lbl_delete_chat">Delete Chat</string>
    <string name="lbl_details">Details</string>
    <string name="lbl_sharedfiles">Shared Files</string>
    <string name="lbl_allfiles">All Files</string>
    <string name="lbl_chatSettings">Chat Settings</string>
    <string name="lbl_mutemessages">Mute Messages</string>
    <string name="lbl_hidechats">Hide Chat</string>
    <string name="lbl_archiveChat">Archive Chat</string>
    <string name="lbl_view_booking">View Booking</string>
    <string name="lbl_activity_records">Activity &amp; Records</string>
    <string name="lbl_wallet">Wallet</string>
    <string name="lbl_account">Account</string>
    <string name="lbl_order_history">Order history</string>
    <string name="lbl_booking">Bookings</string>
    <string name="lbl_saved">Saved</string>
    <string name="lbl_notification_reminder">Notifications/Reminders</string>
    <string name="lbl_referals_vouchers">Referals &amp; Vouchers</string>
    <string name="lbl_become_trainer">Become a Trainer</string>
</resources>