<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_color_dark_blue"
    tools:context=".activities.MessagesDetailsActivity">

    <RelativeLayout
        android:id="@+id/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <ImageView
            android:id="@+id/backarrow"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/ic_back_arrow_foreground" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:fontFamily="@font/rubik_bold"
            android:gravity="center"
            android:text="@string/lbl_details"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/layout_toolbar"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@color/grey" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_10sdp"
        android:layout_below="@id/view">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_bold"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/lbl_sharedfiles"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_allfiles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:fontFamily="@font/rubik_regular"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/lbl_allfiles"
            android:textColor="@color/light_sky"
            android:textSize="18sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sharedfilesRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_allfiles" />

        <TextView
            android:id="@+id/lable_chatsetting"
             android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sharedfilesRV"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/rubik_bold"
            android:text="@string/lbl_chatSettings"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:paddingVertical="@dimen/_10sdp"/>

        <RelativeLayout
            android:id="@+id/rlayout_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_10sdp"
            android:layout_below="@id/lable_chatsetting">

            <TextView
                 android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_regular"
                android:text="@string/lbl_notifications"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/switch_1"
                 android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical"
                android:thumb="@drawable/custom_switch"
                tools:ignore="UseSwitchCompatOrMaterialXml" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlayout_mutemessages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_10sdp"
            android:layout_below="@id/rlayout_notification">

            <TextView
                 android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_regular"
                android:text="@string/lbl_mutemessages"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/switch_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical"
                android:thumb="@drawable/custom_switch"
                tools:ignore="UseSwitchCompatOrMaterialXml" />


        </RelativeLayout>

        <TextView
            android:id="@+id/txt_mutemessage"
             android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rlayout_mutemessages"
            android:fontFamily="@font/rubik_regular"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/lbl_markas_unread"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_hide_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/lbl_hidechats"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_below="@id/txt_mutemessage"
            android:paddingVertical="@dimen/_10sdp"/>

        <TextView
            android:id="@+id/txt_archive_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/lbl_archiveChat"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_below="@id/txt_hide_chat"
            android:paddingVertical="@dimen/_10sdp"/>

        <TextView
            android:id="@+id/txt_delete_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_archive_chat"
            android:fontFamily="@font/rubik_regular"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/lbl_delete_chat"
            android:textColor="@color/red"
            android:textSize="18sp" />

    </RelativeLayout>

</RelativeLayout>