<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_40sdp"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/_5sdp"
    android:elevation="@dimen/_2sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_regular"
            android:padding="@dimen/_5sdp"
            android:text="@string/lbl_viewprofile"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_regular"
            android:padding="@dimen/_5sdp"
            android:text="@string/lbl_view_booking"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_regular"
            android:padding="@dimen/_5sdp"
            android:text="@string/lbl_message"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>