<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color_dark_blue"
    tools:context=".activities.PricingActivity">

    <RelativeLayout
        android:id="@+id/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">


        <ImageView
            android:id="@+id/backarrow"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/ic_back_arrow_foreground"
            app:tint="@color/white" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:fontFamily="@font/rubik_bold"
            android:gravity="center"
            android:text="@string/lbl_pricing"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:layout_below="@id/layout_toolbar"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_5sdp"
            android:fontFamily="@font/rubik_regular"
            android:gravity="center"
            android:text="@string/discription_for_pricing"
            android:textColor="@color/white"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/btn_perSession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custome_cardview"
            android:fontFamily="@font/rubic_medium"
            android:layout_margin="@dimen/_5sdp"
            android:padding="@dimen/_20sdp"
            android:text="@string/lbl_per_session"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/btn_groupSession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/custome_cardview"
            android:fontFamily="@font/rubic_medium"
            android:padding="@dimen/_20sdp"
            android:text="@string/lbl_group_session"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/btn_discounts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/custome_cardview"
            android:fontFamily="@font/rubic_medium"
            android:padding="@dimen/_20sdp"
            android:text="@string/lbl_discount"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>


</RelativeLayout>