<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color_dark_blue"
    tools:context=".activities.ChooseAvailabilityActivity">


    <LinearLayout
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/_10sdp">

        <ImageView
            android:id="@+id/backarrow"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/ic_back_arrow_foreground"
            app:tint="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_choose_availability"
            android:fontFamily="@font/rubik_bold"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/backButton"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_time_duration"
            android:textColor="@color/white"
            android:fontFamily="@font/rubic_medium"
            android:layout_gravity="center"
            android:textSize="18sp"/>


        <LinearLayout
            android:id="@+id/linear_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3">

                <RadioButton
                    android:id="@+id/male_rdb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/lbl_30min"
                    android:buttonTint="@color/white"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/female_rdb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lbl_45min"
                    android:buttonTint="@color/white"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/others_rdb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lbl_60min"
                    android:buttonTint="@color/white"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </RadioGroup>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>